--- a/index.html
+++ b/index.html
@@ -15,28 +15,31 @@
 
 <body>
 
-  <header class="big-text">
-    <div id="texth">
-        <h2>RATANA SHOP</h2>
-    </div>
-    <!-- <div id="searchResults" class="results-dropdown"></div> -->
-</header>
-<main1>
-<div class="search-bar">
-    <input type="text" id="searchInput" placeholder="ស្វែងរក" aria-label="Search Products">
-    <label class="labels"><i class="fa-solid fa-magnifying-glass"></i></label>
-</div>
+<div class="headf">
+    <header class="big-text">
+        <div id="texth">
+            <h2>RATANA SHOP</h2>
+        </div>
+        <!-- <div id="searchResults" class="results-dropdown"></div> -->
+    </header>
 
-    <main class="menu-wrapper">
-        <!-- Student cards will be dynamically inserted here -->
-    </main>
-</main1>
+    <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="ស្វែងរក" aria-label="Search Products">
+        <label class="labels"><i class="fa-solid fa-magnifying-glass"></i></label>
+        </div>
+    </div>
+
+    <div class="main">
+        <div class="menu-wrapper">
+            <!-- product cards will be dynamically inserted here -->
+        </div>
+    </div>
     <!-- info------------------------------------------------------ -->
     <div class="info">
         <div class="myprofile">
             <img src="img/mypic/pf1.png" alt="">
         </div>
-        <h2>សូមទាក់ទងមកខ្ញុំតាមរយៈវិធីសាស្រ្តខាងក្រោម</h2>
+        <h2>សូមអរគុណដែលចូលមកគេហទំព័ររបស់ខ្ញុំ<br>សូមទាក់ទងមកខ្ញុំតាមរយៈវិធីសាស្រ្តខាងក្រោម</h2>
         <div class="call">
             <div class="method">
                 <i class="fa-brands fa-facebook-messenger"></i>
