--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </script>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <title>រតនាSHOP</title>
+    <title>RATANA SHOP</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
