--- a/index.html
+++ b/index.html
@@ -28,29 +28,37 @@
         <label class="labels"><i class="fa-solid fa-magnifying-glass"></i></label>
         </div>
     </div>
-
+    
     <div class="main">
         <div class="menu-wrapper">
             <!-- product cards will be dynamically inserted here -->
         </div>
     </div>
-    <!-- info------------------------------------------------------ -->
+
+<!-- info------------------------------------------------------ -->
+
+    <div class="conect">
+        <h2><a href=""><i class="fa-solid fa-plus" style="color: #ffffff;"></i></a></h2>
+    </div>
     <div class="info">
         <div class="myprofile">
             <img src="img/mypic/pf1.png" alt="">
         </div>
-        <h2>សូមអរគុណដែលចូលមកគេហទំព័ររបស់ខ្ញុំ<br>សូមទាក់ទងមកខ្ញុំតាមរយៈវិធីសាស្រ្តខាងក្រោម</h2>
+        <h2>សូមអរគុណដែលបានចូលមកគេហទំព័ររបស់ខ្ញុំ<br>សូមទាក់ទងមកខ្ញុំតាមរយៈវិធីសាស្រ្តខាងក្រោម</h2>
         <div class="call">
             <div class="method">
-                <i class="fa-brands fa-facebook-messenger"></i>
+                <a href="https://m.me/roth.thana.931773/">
+                    <i class="fa-brands fa-facebook-messenger"></a></i>
                 <p>Messenger</p>
             </div>
             <div class="method">
-                <i class="fa-brands fa-telegram"></i>
+                <a href="https://t.me/ratanaigc">
+                    <i class="fa-brands fa-telegram"></a></i>
                 <p>Telegram</p>
             </div>
             <div class="method">
-                <i class="fa-solid fa-phone"></i>
+                <a href="+855886007831">
+                    <i class="fa-solid fa-phone"></a></i>
                 <p>Call</p>
             </div>
         </div>
