--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     crossorigin="anonymous">
     </script>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logobg.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <title>RATANA SHOP</title>
     <link rel="stylesheet" href="style.css">
 
