--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="headf">
     <header class="big-text">
         <div id="texth">
-            <img src="logobg.png" alt=""; class="logobg";></label>
+            <img src="logo.png" alt=""; class="logobg";></label>
             <h2>RATANA SHOP</h2>
         </div>
         <!-- <div id="searchResults" class="results-dropdown"></div> -->
