--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <label class="labels"><i class="fa-solid fa-magnifying-glass"></i></label>
         </div>
     </div>
-    
     <div class="main">
         <div class="menu-wrapper">
             <script src="product.js"></script>
@@ -49,7 +48,7 @@
     <div class="myprofile">
         <img src="img/mypic/pf1.png" alt="">
     </div>
-    <h2>សូមអរគុណដែលបានចូលមកគេហទំព័ររបស់ខ្ញុំ<br>សូមទាក់ទងមកខ្ញុំតាមរយៈវិធីសាស្រ្តខាងក្រោម</h2>
+    <h2>សូមអរគុណដែលបានមកកាន់គេហទំព័ររបស់ខ្ញុំ<br>សូមទាក់ទងមកខ្ញុំតាមរយៈវិធីសាស្រ្តខាងក្រោម</h2>
      <div class="call">
         <div class="method">
             <a href="https://m.me/roth.thana.931773/">
@@ -64,7 +63,7 @@
             <p>Telegram</p>
         </div>
         <div class="method">
-            <a href="tel:+855886007831">
+            <a href="+855886007831">
                 <i class="fa-solid fa-phone"></i>
             </a>
             <p>Call</p>
@@ -93,7 +92,6 @@
             </p>
         </div>
     </div>
-    
     <script src="script.js"></script>
 </body>
 </html>
